--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".FinalizeShoppingActivity">
+        </activity>
+        <activity android:name=".CartProductsActivity">
+        </activity>
         <activity android:name=".FetchEProductsActivity">
-
         </activity>
         <activity android:name=".HomeScreen">
+        </activity>
+        <activity android:name=".SignUpLayout">
+        </activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity android:name=".SignUpLayout">
-        </activity>
-        <activity android:name=".MainActivity">
-
         </activity>
     </application>
 
